# factor-risk-modeling

./: .cookiecutterrc  .coveragerc  .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
ci/: bootstrap.py  requirements.txt
ci/templates/: tox.ini
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  index.rst  installation.rst  readme.rst  requirements.txt  usage.rst
docs/reference/: FactorRiskModeling.rst  index.rst
envs/: FactorRiskModeling.yml
scripts/: deploy.py
src/.info/: AUTHORS.md  CHANGELOG.md
src/FactorRiskModeling/: _FactorRiskModeling.c  _FactorRiskModeling.pyx  _FactorRiskModeling_build.py  __init__.py  __main__.py  cli.py
tests/: test_FactorRiskModeling.py
