[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.bumpver]
current_version = "2023.7.0"
version_pattern = "YYYY.MM.PATCH[PYTAGNUM]"
commit_message = "ver(FactorRiskModeling): bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"src/FactorRiskModeling/__init__.py" = [
    "{version}",
    "{pep440_version}",
]
"docs/conf.py" = [
    "{version}",
    "{pep440_version}",
]
"docs/readme.rst" = [
    "{version}",
    "{pep440_version}",
]